--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
     <head>
-        <title>Server Control Page</title>
+        <title>PieCraft DNS Switcher</title>
     </head>
     <body>
-        <h1> Welcome to the Server Page </h1>
-        <p>Please use the buttons below to contorl server functions</p>
-        <p>
-            <button id="triggerButton"> TriggerButton </button>
-        </p>
-        <p> Server Status: <h2 id="status">Waiting for Status</h2></p>
+        <h1> Welcome to the DNS Switcher</h1>
     </body>
-    <script src="client.js"></script>
 </html>
